@@ -23,6 +23,12 @@
           </a>
         </div>
 
+        <div id="controlbtngrp" class="btn-group" style="width: 120px; margin-left: auto; margin-right: auto; display: none;">
+          <button id="stopbtn" type="button" class="btn btn-warning navbar-btn"><span class="glyphicon glyphicon-stop"></span></button>
+          <button id="pausebtn" type="button" class="btn btn-warning navbar-btn"><span class="glyphicon glyphicon-pause"></span></button>
+          <button id="playbtn" type="button" class="btn btn-warning navbar-btn"><span class="glyphicon glyphicon-play"></span></button>
+        </div>
+
         <ul class="nav navbar-nav navbar-right">
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Options <span class="caret"></span></a>
